syntax = "proto3";

package com.road.yishi.proto.leed;

message ClientReqMsg {
  int32 templateId = 1;
}
